fix font size on small devices

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -10,7 +10,7 @@
 
 // https://github.com/mmistakes/minimal-mistakes/issues/1219#issuecomment-326809412
 html {
-    font-size: 12px; // originally 16px
+    font-size: 14px; // originally 16px
     @include breakpoint($medium) {
         font-size: 14px; // originally 18px
     }
